# sdkcheck

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dogfood.yml  pages.yml  release.yml  security.yml
docs/: architecture.md  getting-started.md  installation.md  reference-cli.md  release-checklist.md  security-model.md
site/: CNAME  index.html  styles.css
src/: cli.rs  fake_openai.rs  main.rs  models.rs  report.rs  runner.rs  secrets.rs
src/audits/: docs.rs
src/recipes/: co_op_translator.rs  mod.rs
