[package]
name = "sdkcheck"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Turn product documentation into executable QA scenarios."
readme = "README.md"
homepage = "https://sdkcheck.com"
repository = "https://github.com/skytin1004/sdkcheck"
documentation = "https://docs.rs/sdkcheck"
keywords = ["docs", "qa", "ci", "agent", "docker"]
categories = ["command-line-utilities", "development-tools::testing"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/SECURITY.md",
    "/docs/**",
    "/src/**",
]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wait-timeout = "0.2"
