[package]
name = "sdkcheck"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Audit whether an agent can execute your product docs in isolated environments."
readme = "README.md"
homepage = "https://sdkcheck.com"
repository = "https://github.com/skytin1004/sdkcheck"
keywords = ["qa", "ci", "agent", "docker", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/assets/banner.svg",
    "/CHANGELOG.md",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/SECURITY.md",
    "/src/**",
]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rig-core = "0.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["rt"] }
wait-timeout = "0.2"
